# resd.dpdk_tcp

./: .gitignore  .gitmodules  Cargo.toml  README.md
.claude/agents/: rfc-compliance-reviewer.md
crates/dpdk-net/: Cargo.toml  cbindgen-test.toml  cbindgen.toml
crates/dpdk-net-core/: Cargo.toml
crates/dpdk-net-core/fuzz/: Cargo.toml
crates/dpdk-net-core/fuzz/fuzz_targets/: tcp_seq.rs
crates/dpdk-net-core/src/: counters.rs  ena_xstats.rs  engine.rs  error.rs  fault_injector.rs  lib.rs  mempool.rs  tcp_conn.rs  tcp_input.rs  tcp_options.rs  tcp_output.rs  tcp_reassembly.rs  tcp_retrans.rs  tcp_timer_wheel.rs  test_server.rs  wc_verify.rs
crates/dpdk-net-core/tests/: counter-coverage.rs  ena_obs_smoke.rs  inject_rx_chain_smoke.rs  knob-coverage.rs  test_server_listen_accept_established.rs
crates/dpdk-net-core/tests/common/: mod.rs
crates/dpdk-net-sys/: build.rs  shim.c  wrapper.h
crates/dpdk-net/src/: api.rs  lib.rs  test_ffi.rs
crates/dpdk-net/tests/: test_header_excluded.rs
crates/resd-net/: cbindgen.toml
crates/resd-net-core/: Cargo.toml
crates/resd-net-core/src/: arp.rs  clock.rs  counters.rs  dpdk_consts.rs  engine.rs  error.rs  flow_table.rs  iss.rs  l2.rs  l3_ip.rs  lib.rs  llq_verify.rs  mempool.rs  tcp_conn.rs  tcp_events.rs  tcp_input.rs  tcp_options.rs  tcp_output.rs  tcp_reassembly.rs  tcp_sack.rs  tcp_state.rs  tcp_timer_wheel.rs  tcp_tlp.rs
crates/resd-net-core/tests/: ahw_smoke_ena_hw.rs  engine_smoke.rs  knob-coverage.rs  l2_l3_tap.rs  tcp_a5_5_observability.rs  tcp_a6_public_api_tap.rs  tcp_basic_tap.rs  tcp_options_paws_reassembly_sack_tap.rs
crates/resd-net-sys/: Cargo.toml  build.rs  shim.c  wrapper.h
crates/resd-net-sys/src/: lib.rs
crates/resd-net/src/: api.rs  lib.rs
docs/superpowers/plans/: 2026-04-17-stage1-phase-a1-skeleton.md  2026-04-18-stage1-phase-a3-tcp-basic.md  2026-04-18-stage1-phase-a5-rack-rto-retransmit.md  2026-04-19-stage1-phase-a-hw-ena-offload.md  2026-04-19-stage1-phase-a6-public-api-completeness.md  2026-04-20-stage1-phase-a6-6-7-rx-zero-copy-and-ffi-safety-audit.md  2026-04-21-stage1-phase-a10-benchmark-harness.md  2026-05-01-stage1-phase-a10.5-starter-prompt.md  stage1-phase-roadmap.md
docs/superpowers/reports/: stage1-rfc793bis-must-matrix.md
docs/superpowers/reviews/: phase-a-hw-plus-mtcp-compare.md  phase-a-hw-plus-rfc-compliance.md  phase-a10-5-mtcp-compare.md  phase-a2-mtcp-compare.md  phase-a4-rfc-compliance.md  phase-a5-5-mtcp-compare.md  phase-a5-5-rfc-compliance.md  phase-a6-mtcp-compare.md  phase-a6-rfc-compliance.md  phase-a7-mtcp-compare.md  phase-a7-rfc-compliance.md
docs/superpowers/specs/: 2026-04-17-dpdk-tcp-design.md  2026-04-18-stage1-phase-a5-5-event-log-forensics-design.md  2026-04-19-stage1-phase-a-hw-ena-offload-design.md  2026-04-19-stage1-phase-a5-6-rtt-histogram-design.md  2026-05-01-stage1-phase-a10-5-layer-h-correctness-design.md
examples/cpp-consumer/: CMakeLists.txt  main.cpp
include/: dpdk_net.h  dpdk_net_test.h  resd_net.h
scripts/: bench-nightly.md  bench-nightly.sh  check-bench-preconditions.sh  ci-feature-matrix.sh  fetch-rfcs.sh  fuzz-long-run.sh
tests/ffi-test/tests/: ffi_smoke.rs
tools/bench-ab-runner/: Cargo.toml
tools/bench-ab-runner/src/: main.rs  workload.rs
tools/bench-common/tests/: csv_row_roundtrip.rs
tools/bench-e2e/src/: main.rs
tools/bench-offload-ab/: Cargo.toml
tools/bench-offload-ab/src/: decision.rs  main.rs  report.rs
tools/bench-offload-ab/tests/: decision_rule.rs
tools/bench-report/src/: md_writer.rs
tools/bench-stress/: Cargo.toml
tools/bench-stress/src/: counters_snapshot.rs  main.rs  netem.rs
tools/bench-vs-mtcp/src/: dpdk_burst.rs  main.rs
tools/layer-h-correctness/: Cargo.toml
tools/layer-h-correctness/src/: counters_snapshot.rs  lib.rs  main.rs  observation.rs  scenarios.rs
tools/layer-h-correctness/tests/: scenario_parse.rs
tools/packetdrill-shim/: SKIPPED.md  build.sh
tools/packetdrill-shim-runner/: Cargo.toml  build.rs
tools/packetdrill-shim-runner/src/: classifier.rs  counts.rs  invoker.rs
tools/packetdrill-shim-runner/tests/: corpus_google.rs  corpus_ligurio.rs  corpus_shivansh.rs
tools/packetdrill-shim-runner/tests/scripts/: smoke.pkt
tools/packetdrill-shim/classify/: google.toml  ligurio.toml
tools/tcpreq-runner/: SKIPPED.md
tools/tcpreq-runner/src/: lib.rs
tools/tcpreq-runner/src/probes/: mod.rs  mss.rs  reserved.rs  rst_ack.rs  urgent.rs
