[package]
name = "resd-net-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
resd-net-sys = { path = "../resd-net-sys" }
libc.workspace = true
thiserror.workspace = true

[features]
default = ["obs-poll-saturation"]
# Hot-path TCP payload byte counters. Default OFF — see spec §9.1.1.
# Per-burst-batched increment in engine.rs (Tasks 25-26).
obs-byte-counters = []
# Hot-path poll-saturation counter (poll.iters_with_rx_burst_max).
# Default ON — single conditional fetch_add per poll, no cheap alternative.
obs-poll-saturation = []
# Meta-feature for the A8 counter-coverage audit (`--features obs-all`).
obs-all = ["obs-byte-counters", "obs-poll-saturation"]

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
